# StringNumber

./: CMakeLists.txt  README.md  main.cpp  stringnumber.cpp  stringnumber.h
test/: CMakeLists.txt  stringnumbertest.cpp
